<resources>
    <string name="app_name">Altoke</string>
    <string name="order_code">Cód. de pedido: %1$s</string>
    <string name="order_date">Fecha: %1$s</string>
    <string name="order_state">Estado: %1$s</string>
    <string name="order_store_name">Tienda: %1$s</string>
    <string name="order_total_cost">Total: %1$s CLP</string>
    <string name="product_quantity">Cantidad: %1$s</string>
    <string name="product_cost">Precio unidad: %1$s</string>
    <string name="add_to_cart">Agregar al carrito</string>
    <string name="product_img_description">Imagen del producto</string>
</resources>