<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/order_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_code"/>

        <TextView
            android:id="@+id/order_store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_store_name"/>

        <TextView
            android:id="@+id/order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_date"/>

        <TextView
            android:id="@+id/order_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_state"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:id="@+id/order_total_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_total_cost"
            android:textAppearance="?attr/textAppearanceHeadline6" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>